# aws-s3-sample

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  docker-compose.yml  sample.txt  secrets.cfg.template
.github/workflows/: create_release.yml  pull_request.yml
bash/: download-s3-object.sh
devops/docker-compose/bash/: Dockerfile  upload-s3-object.sh
devops/terraform/: locals.tf  main.tf  output.tf  provider.tf  variables.tf
modules/: lib.rs
modules/aws_connectors/: aws_s3_bucket_handler.rs
modules/connectors/: aws_s3_bucket_handler.rs  blob_connector.rs
src/: main.rs
temp/: secrets.template.cfg
templates/: secrets.template.cfg
test/: test_aws_s3_bucket_handler.rs
