[package]
name = "aws_s3_bucket_handler"
authors = ["MGTheTrain"]
license-file = "LICENSE"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aws_s3_bucket_handler"
path = "src/main.rs" 

[lib]
name = "common_modules"
path = "modules/lib.rs"

[[test]]
name = "test_aws_s3_bucket_handler"
path = "test/test_aws_s3_bucket_handler.rs"

[dependencies]
aws-config = "0.56.1"
aws-sdk-s3 = "0.31.2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.3.1", features = ["serde", "v4"] }
dotenv = "0.15.0"
log = "0.4.20"
env_logger = "0.10.0"
clap = { version = "4.4.7", features = ["derive"] }
colored = "2.0.4"